--- a/code-server/deployment/my-code-server.yaml
+++ b/code-server/deployment/my-code-server.yaml
@@ -32,7 +32,7 @@ spec:
         app: code-server
     spec:
       containers:
-        - image: kimhaksoo/code-server
+        - image: kimhaksoo/code-server:v0.1
           imagePullPolicy: IfNotPresent
           name: code-server
           ports:
