--- a/sftp-server/values.yaml
+++ b/sftp-server/values.yaml
@@ -18,7 +18,7 @@ service:
 ingress:
   enabled: false
   className: ""
-  annotations:  
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
